--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 <li><a href="#">VIDEOS</a></li>
                 <li><a href="#Movies">Movies</a></li>
                 <li><a href="#enviro">Enviroment</a></li>
-                <li><a href="#contact">About Me0</a></li>
+                <li><a href="#contact">About Me</a></li>
             </ul>
         </div>
 
@@ -75,6 +75,28 @@ Start coding from here
                     </p>
                 </div>
             </center>
+        </section>
+        <section id="enviro">
+        <div class="page-header col-lg-12 col-md-12 col-sm-12 col-xs-12" id="enviroment">
+            <h2 class="text-capitalize">News about enviroment</h2>
+            </div>
+            <ui class="list-group">
+                <li class="list-group-item list-group-item-success col-lg-12 col-md-12 col-sm-12 col-xs-12 enviroment_li">
+                <h4>Lego plans to find replacement materials for brick by 2030. </h4>
+                    <img src="e1.jpeg" class="img-responsive col-lg-5 col-md-5 col-sm-5 col-xs-12">
+                    <p class="list-group-item-text col-lg-7 col-md-7 col-sm-7 col-xs-12">
+                     If you've ever played with a competing brand of "interlocking plastic bricks," you know that Lego's big advantage is their solidity, their seemingly infinitesimal tolerances that make sure every piece fits just so with every other. The seams turn invisible. The secret to that tight connection (and how painful Legos are to step on): plastic. Specifically, a very tough plastic called ABS, or acrylonitrile-butadiene-styrene, three polymers derived from petroleum. So last month, Lego announced that it would launch, later this year or next, a Sustainable Materials Centre—100 engineers, chemical engineers, and materials experts all trying to find an eco-friendly replacement for ABS and other ingredients in the company's toys.
+                    </p>
+                </li>
+            <li class="list-group-item list-group-item-warning col-lg-12 col-md-12 col-sm-12 col-xs-12 enviroment_li">
+                <h4> Amazon deforestation and number of fires show summer of 2019 not a 'normal' year.</h4>
+                    <img src="e3.jpeg" class="img-responsive col-lg-5 col-md-5 col-sm-5 col-xs-12">
+                    <p class="list-group-item-text col-lg-7 col-md-7 col-sm-7 col-xs-12">
+                   An unprecedented number of fires raged throughout Brazil in 2019, intensifying in August. That month, the country’s National Institute for Space Research (INPE) reported that there were more than 80,000 fires, the most that it had ever recorded. It was a nearly 80 percent jump compared to the number of fires the country experienced over the same time period in 2018. More than half of those fires took place in the Amazon.     
+                </p>
+                </li>
+            
+            </ui>
         </section>
         <section id="Movies">
             <div class="page-header" id="movie">
@@ -136,13 +158,16 @@ Start coding from here
 
         <div class="contact_1">
 
-            <a href="mailto:my@gmail.com?Subject=Hi">
-                <h5><i class="fa fa-envelope"></i>&nbsp;&nbsp;mygmailid@gmail.com</h5>
+            <a href="mailto:satishkumarandcompanysablgarh@gmail.com?Subject=Hi">
+                <h5><i class="fa fa-envelope"></i>&nbsp;&nbsp;satishkumarandcompanysabalgarh@gmail.com</h5>
             </a>
 
             <a href="#">
                 <h5><i class="fa fa-instagram"></i>&nbsp;&nbsp;myinstagramid</h5>
             </a>
+            <hr style="width: 100%;">
+            <img src="kid.jpeg" class="img-responsive img-circle col-lg-3 col-md-3 col-sm-3 col-xs-4">
+            <h3>Surya Garg</h3>
         </div>
     </section>
 
